# canvaz

./: .gitignore  CMakeLists.txt  README.md
packaging/: PKGBUILD
release/: PKGBUILD
resources/: canvaz.desktop  resources.qrc
src/: MainWindow.cpp  MainWindow.h  PreferencesDialog.cpp  PreferencesDialog.h  WallpaperScanner.cpp  WallpaperScanner.h  main.cpp
